[gd_scene load_steps=10 format=3 uid="uid://3ic8debmyys5"]

[ext_resource type="Script" path="res://main/main.gd" id="1_t2eme"]
[ext_resource type="Script" path="res://player/camera.gd" id="2_hxq3q"]
[ext_resource type="Script" path="res://main/world.gd" id="2_vl4hx"]
[ext_resource type="PackedScene" uid="uid://bg3xqibb0m2uo" path="res://level/level.tscn" id="3_2njgr"]
[ext_resource type="PackedScene" uid="uid://egj1j88ed826" path="res://player/player.tscn" id="5_rxcie"]
[ext_resource type="PackedScene" uid="uid://dplv5ybu5kawn" path="res://item/hotbar.tscn" id="8_en8b8"]
[ext_resource type="Script" path="res://main/hud.gd" id="8_pkfmd"]
[ext_resource type="PackedScene" uid="uid://lvfix7a3oquy" path="res://item/inventory.tscn" id="9_pag4p"]
[ext_resource type="Script" path="res://player/health.gd" id="11_63l4i"]

[node name="Main" type="Node"]
script = ExtResource("1_t2eme")

[node name="World" type="Node" parent="."]
script = ExtResource("2_vl4hx")

[node name="Level" parent="World" instance=ExtResource("3_2njgr")]

[node name="Player" parent="World" instance=ExtResource("5_rxcie")]

[node name="Camera" type="Camera2D" parent="World"]
script = ExtResource("2_hxq3q")
metadata/_edit_group_ = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("8_pkfmd")

[node name="Hotbar" parent="HUD" instance=ExtResource("8_en8b8")]
metadata/_edit_use_anchors_ = true

[node name="Inventory" parent="HUD" instance=ExtResource("9_pag4p")]
metadata/_edit_use_anchors_ = true

[node name="Health" type="ProgressBar" parent="HUD"]
offset_left = 16.0
offset_top = 16.0
offset_right = 496.0
offset_bottom = 64.0
step = 1.0
value = 75.0
script = ExtResource("11_63l4i")
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[connection signal="erased" from="World/Level" to="World" method="_on_level_erased"]
[connection signal="placed" from="World/Level" to="HUD/Hotbar" method="_on_level_placed"]
[connection signal="moved" from="World/Player" to="World/Level" method="_on_player_moved"]
[connection signal="moved" from="World/Player" to="World/Camera" method="_on_player_moved"]
[connection signal="picked_up" from="World/Player" to="HUD/Hotbar" method="_on_player_picked_up"]
[connection signal="focused" from="HUD" to="World/Level" method="_on_hud_focused"]
[connection signal="item_dropped" from="HUD" to="World" method="_on_item_dropped"]
[connection signal="item_pushed" from="HUD/Hotbar" to="HUD/Inventory" method="_on_hotbar_item_pushed"]
[connection signal="mouse_entered" from="HUD/Hotbar" to="HUD" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HUD/Hotbar" to="HUD" method="_on_mouse_exited"]
[connection signal="overflowed" from="HUD/Hotbar" to="HUD/Inventory" method="_on_hotbar_overflowed"]
[connection signal="selected" from="HUD/Hotbar" to="World/Level" method="_on_hotbar_selected"]
[connection signal="item_pushed" from="HUD/Inventory" to="HUD/Hotbar" method="_on_inventory_item_pushed"]
[connection signal="mouse_entered" from="HUD/Inventory" to="HUD" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HUD/Inventory" to="HUD" method="_on_mouse_exited"]
[connection signal="overflowed" from="HUD/Inventory" to="World" method="_on_item_dropped"]
